Fix multiple proxies overlapping

--- a/src/proxy-bar.less
+++ b/src/proxy-bar.less
@@ -87,6 +87,10 @@
     }
   }
 
+  ul {
+    display: flex;
+  }
+
   li {
     width: 40px;
     height: 40px;
